# task-Almazgeobur

./: .gitignore  README.md  compose.yml  docker-compose.yml  report-example.md  sales-example.xml
app/: .env  .env.example  Dockerfile  pyproject.toml
app/app/: api.py  cache.py  celery.py  db.py  hash.py  llm.py  logger.py  main.py  models.py  parser.py  tasks.py
app/tests/: test_api.py  test_cache.py  test_db.py  test_parser.py  test_tasks.py
architecture/: c4-model.dsl
initdb.d/: init.sql
