[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["neojelll <timofejmitusin60892@gmail.com>"]
readme = "README.md"

packages = [
	{ include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
asyncpg = "^0.29.0"
redis = "^5.0.8"
loguru = "^0.7.2"
lxml = "^5.3.0"
celery = "^5.4.0"
python-dotenv = "^1.0.1"
gigachain-community = "^0.2.16.post3"
gigachain-cli = "^0.0.30.post1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
run-app = "app.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --cov=api --cov-report term-missing --cov-fail-under=100"

[tool.coverage.run]
omit = [
    "api/main.py",
    "api/logger.py",
    "api/models.py",
    ]

[tool.ruff]
target-version = "py312"
indent-width = 4
fix = true

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[lint]
ignore = ["E501"]
