[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["neojelll <timofejmitusin60892@gmail.com>"]
readme = "README.md"

packages = [
	{ include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
asyncpg = "^0.29.0"
redis = "^5.0.8"
loguru = "^0.7.2"
lxml = "^5.3.0"
celery = "^5.4.0"
python-dotenv = "^1.0.1"
gigachain-community = "^0.2.16.post3"
python-multipart = "^0.0.17"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
run-app = "app.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --cov=app --cov-report term-missing --cov-fail-under=100"

[tool.coverage.run]
omit = [
    "app/main.py",
    "app/logger.py",
    "app/models.py",
    "app/celery.py",
    "app/hash.py",
    "app/llm.py",
    ]

[tool.ruff]
target-version = "py312"
indent-width = 4
fix = true

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[lint]
ignore = ["E501"]
